# play_with_rust

./: .gitignore  Cargo.toml
async-await-echo/: Cargo.toml
bouncy-args/: Cargo.toml
bouncy-ball/: Cargo.toml
bouncy4/: Cargo.toml
interval/: Cargo.toml
new_futures/: Cargo.toml
new_futures/src/: futures_async.rs  main.rs
old_futures/: Cargo.toml
old_futures/src/: ExpensiveFuture.rs  concurrency_arc.rs  concurrency_arc_mutex.rs  concurrency_cell.rs  concurrency_cell_mine.rs  concurrency_cell_usecase.rs  concurrency_factory_creatin_send_sync.rs  concurrency_pw_threads.rs  concurrency_racing_1.rs  concurrency_racing_2.rs  concurrency_refcell.rs  concurrency_rw_lock.rs  concurrency_rw_lock_example_configs.rs  concurrency_send_sync_issue.rs  concurrency_static_lazy_user_input.rs  concurrency_static_lazy_with_mutex.rs  concurrency_static_lazy_without_mutex.rs  concurrency_static_mut.rs  concurrency_static_mut_so_question_simplified.rs  concurrency_thread_local.rs  concurrency_thread_local_with_arc.rs  concurrency_thread_local_with_rc.rs  concurrency_thread_local_with_rwlock.rs  conversion_types.rs  devto_future_custom_implementation.rs  devto_future_custom_implementation2.rs  devto_streams.rs  futures_in_ifs.rs  futures_in_parallel.rs  futures_to_streams.rs  global_mutable.rs  global_mutable_integer.rs  impl_trait_for_ref.rs  impl_vs_dyn.rs  into_iter.rs  into_iter_pixel.rs  into_iter_pixel_ref.rs  iterator_boxed_return.rs  iterator_build_custom.rs  iterator_divisable.rs  (+37 more)
src/: borrowselfissue.rs  channels.rs  circle.rs  futures_either.rs  futures_in_parallel.rs  (+27 more)
(+12 files in other folders)
