[package]
name = "new_futures"
version = "0.1.0"
authors = ["Patrik Stas <patrik.stas@absa.co.za>"]
edition = "2018"

[dependencies]
futures ={ version = "0.3.1", features = ["compat"] }
tokio = "0.2.2"
tokio-core = "0.1.17"
rand = "0.7.0"
    hyper = "0.12.12"
reqwest = "0.9.20"
futures-cpupool = "0.1.8"
chrono = "0.4.10"